--- a/CSS/main_root.css
+++ b/CSS/main_root.css
@@ -1,12 +1,10 @@
 html {
+	width: 100vw;
 	font-size: calc(1em + 0.5vw + 0.5vh);
 	font-family: Microsoft JhengHei, Tahoma, Verdana, Arial, sans-serif;
+	overflow-x: hidden;
 }
 
 body {
 	background-color: #F7F7F7;
-}
-
-body .night {
-	background-color: rgb(2, 0, 14)
 }
