--- a/CSS/main_alert.css
+++ b/CSS/main_alert.css
@@ -28,5 +28,8 @@
 	width: 100%;
 	height: 101%;
 	background-color: rgba(0,0,0,0.95);
-	z-index: 50;
+	z-index: 15000;
+}
+.upper {
+	z-index: 99999;
 }
