--- a/CSS/main_header.css
+++ b/CSS/main_header.css
@@ -55,8 +55,8 @@ h1 {
 
 header {
 	position: fixed;
-	height: calc(80px + 0.1vh);
 	width: 100%;
+	height: calc(80px + 0.1vh);
 	margin-left: -30px;
 	margin-top: -40px;
 	transition: 0.5s;
@@ -69,7 +69,7 @@ header {
 header .night {
 	position: fixed;
 	height: calc(80px + 0.1vh);
-	width: 100%;
+	width: 95vw;
 	margin-left: -30px;
 	margin-top: -40px;
 	transition: 0.5s;
@@ -96,8 +96,12 @@ header .night {
 	padding-left: 2vw;
 	display: inline-block;
 }
+#earth {
+	font-size: 100%;
+}
 
 .languageList {
+	margin-top: 40px;
 	position: fixed;
 	z-index: 10000;
 	color: rgba(50, 50, 50, 1);
